src/test/ui/macros/unknown-builtin.stderr
error: cannot find a built-in macro with name `unknown`
  --> $DIR/unknown-builtin.rs:6:1
   |
LL | macro_rules! unknown { () => () }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0773]: attempted to define built-in macro more than once
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
LL | /     macro_rules! line {
LL | |         () => {
LL | |             /* compiler built-in */
LL | |         };
LL | |     }
   | |_____^
   |
note: previously defined here
  --> $DIR/unknown-builtin.rs:9:1
   |
LL | macro_rules! line { () => () }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0773`.
